--- a/m.css
+++ b/m.css
@@ -1,4 +1,4 @@
-body{ background-color: #F06060; color: #fff; font: 12px/1.5 '寰蒋闆呴粦';
+body{ background-color: #F06060; color: #fff; font: 12px/1.5 '微软雅黑';
 }
 body>a{ display: none; }
 
