--- a/m.css
+++ b/m.css
@@ -149,7 +149,7 @@ body>a{ display: none; }
 }
 
 #dialog{
-    background: url(http://mat1.gtimg.com/ln/images/2014zt/08/1819/share.png) top right no-repeat #A74343;
+    background: url(http://tvxqljw.github.io/demo/share.png) top right no-repeat #A74343;
     padding-top: 50px;
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
