--- a/menu.css
+++ b/menu.css
@@ -59,7 +59,7 @@ a {
     position:relative;
     -webkit-box-shadow:inset 0 0 3px #fff;
 }
-.nav4 li:nth-of-type(1){border-left:0;}
+.nav4 li:nth-of-type(1){border-left;0;}
 .nav4 li>a{
     font-size:15px;
     -webkit-box-sizing:border-box;
