--- a/m.css
+++ b/m.css
@@ -59,7 +59,7 @@ body>a{ display: none; }
 #room header .time{
     font-size: 32px;
     font-weight: bold;
-    background-color: #FD9090;
+    background-color: #501171;
     color: #FFCACA;
     padding: 0 10px;
     border-radius: 10px;
