--- a/m.css
+++ b/m.css
@@ -151,7 +151,7 @@ body>a{ display: none; }
 }
 
 #dialog{
-    background: url(http://tvxqljw.github.io/demo/share.png) top right no-repeat #A74343;
+    background: url(http://tvxqljw.github.io/demo/share.png) top right no-repeat #430f5e;
     padding-top: 50px;
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
