--- a/m.css
+++ b/m.css
@@ -169,7 +169,7 @@ body>a{ display: none; }
     line-height: 60px;
     font-size: 40px;
     margin: 0;
-    color: #321;
+    color: #FFA1A1;
 }
 #dialog .inner .pause h3{
     color: #FFE2C5;
