--- a/m.css
+++ b/m.css
@@ -103,6 +103,11 @@ body>a{ display: none; }
     width: 100%;
     height: auto;
 }
+.onSelect {
+    border: 3px solid #EEEEEE;
+    /*background: url(http://mat1.gtimg.com/ln/images/2014zt/08/alsGame/ice_bg.jpg) 0 0 no-repeat;*/
+    /*background-size: 100%;*/
+}
 
 #box{
     position: absolute;
