--- a/m.css
+++ b/m.css
@@ -309,7 +309,7 @@ body>a{ display: none; }
     margin: auto;
     text-align: center;
     width: 80%;
-    padding:5%;
+    padding:8% 5%;
     color: #f5f5f3;
     background: url("back.jpg") no-repeat;
     background-size: cover;
